--- a/index.html
+++ b/index.html
@@ -10,5 +10,32 @@
 </head>
 <body>
     
+    <div class="container">
+
+        <section class="title">
+            <h1>Calculate your BMI</h1>
+        </section>
+        <div class="input-section">
+            <input type="text" placeholder="Mass in Kilogram" class="child">
+            <input type="text" placeholder="height in Meter" class="child">
+            <button class="child">Calculate</button>
+        </div>
+        <div class="main-section">
+            <div class="left-side">
+                <ul>
+                    <li>Underweight: BMI is less than 18.5</li>
+                    <li>Normal weight: BMI is 18.5 to 24.9</li>
+                    <li>Overweight: BMI is 25 to 29.9</li>
+                    <li>Obese: BMI is 30 or more</li>
+                </ul>
+            </div>
+            <div class="right-side">
+                <img src="./assets/default.jpg" alt="default-image">
+            </div>
+        </div>
+        <div class="result-section"></div>
+
+    </div>
+
 </body>
 </html>
