--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <h1>Calculate your BMI</h1>
         </section>
         <div class="input-section" id="input-part">
-            <input type="text" placeholder="Mass in Kilogram" id="mass" required>
-            <input type="text" placeholder="height in Meter" id="height" required>
+            <input type="number" placeholder="Mass in Kilogram" id="mass" required>
+            <input type="number" placeholder="height in Meter" id="height" required>
             <button class="button" id="button" onclick="calculateBMI()">Calculate</button>
         </div>
         <div class="main-section">
             <div class="left-side" id="left-side">
-               <!--  <ul>
+                <ul>
                     <li>Underweight: BMI is less than 18.5</li>
                     <li>Normal weight: BMI is 18.5 to 24.9</li>
                     <li>Overweight: BMI is 25 to 29.9</li>
                     <li>Obese: BMI is 30 or more</li>
             
-                </ul> -->
+                </ul>
             </div>
             <div class="right-side">
                 <img src="./assets/default.jpg" alt="default-image">
