new js file created

--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
         </div>
         
     </div>
-    
-    <!-- <script src="./javascript/main.js"></script> -->    
-    <script src="./javascript/self-practice.js"></script>
+        <script src="./javascript/main.js"></script>
 </body>
 </html>
