--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h1>Calculate your BMI</h1>
         </section>
         <div class="input-section" id="input-part">
-            <input type="number" placeholder="Mass in Kilogram" id="mass" required>
-            <input type="number" placeholder="height in Meter" id="height" required>
-            <button class="button" id="button" onclick="calculateBMI()">Calculate</button>
+            <input type="number" placeholder="Mass in Kilogram" id="mass" >
+            <input type="number" placeholder="height in Meter" id="height">
+            <button class="button" id="button">Calculate</button>
         </div>
         <div class="main-section">
             <div class="left-side" id="left-side">
@@ -35,7 +35,7 @@
         </div>
         <div class="result-section">
             
-            <p>Your result will be here 😄</p>
+            <p>Your result ??😄</p>
 
         </div>
         
